--- a/Views/Home/AddRecord.cshtml
+++ b/Views/Home/AddRecord.cshtml
@@ -1,5 +1,6 @@
 ﻿@model Burialmain
 
+<!--Form to Add a Record for every attribute for the burial main table-->
 <center>
     <div class="card text-white bg-dark mb-3" style="max-width: 50rem;">
         <form method="post" asp-action="AddRecord">
