--- a/Views/Home/Unsupervised.cshtml
+++ b/Views/Home/Unsupervised.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
 }
+<!--Unsupervised Visualizations Explaining Findings-->
 <div class="container mt-5">
     <h1>Unsupervised Model Observations</h1><br /><br />
     <div class="card">
