--- a/Views/Shared/_BurialMainTable.cshtml
+++ b/Views/Shared/_BurialMainTable.cshtml
@@ -5,7 +5,7 @@
 }
 
 @model BurialsViewModel
-
+<!--Burial Main Table-->
 <table class="table text-white" style="background: rgba(0, 0, 0, 0.4);">
     <thead>
         <tr>
