--- a/Views/Shared/_Cookies.cshtml
+++ b/Views/Shared/_Cookies.cshtml
@@ -10,7 +10,7 @@
                 <span aria-hidden="true">&times;</span>
             </button>
         </div>
-        <p>This website uses cookies to ensure you get the best experience on our website. By using our site, you acknowledge that you have read and understand our <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy Policy</a> and <a asp-area="" asp-controller="Home" asp-action="Privacy">Cookie Policy</a>.</p>
+        <p>This website uses cookies to make sure you have a good exoerience when you use our website. By using our site, you acknowledge that you have read and understand our <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy Policy</a> and <a asp-area="" asp-controller="Home" asp-action="Privacy">Cookie Policy</a>.</p>
         <button id="cookie-consent-ok" class="cookie-consent-ok btn btn-primary mt-3">Accept</button>
         <a href="https://gdpr.eu/cookies/" class="cookie-consent-learn-more" target="_blank">Learn More</a>
     </div>
