--- a/Views/Home/DeleteRecordForm.cshtml
+++ b/Views/Home/DeleteRecordForm.cshtml
@@ -2,11 +2,13 @@
 
 <h2 class="text-center">Please Confirm Deletion.</h2>
 <p class="text-center">(Please note this action cannot be undone)</p>
-
+<!--Delete page requesting confirmation before deleting with a warning-->
 <center>
     <form method="post" asp-controller="Home" asp-action="DeleteRecordForm">
+        <!--Delete Button-->
         <button class="btn btn-danger" type="submit">Yes, I want to Delete</button><br /><br />
         <input type="hidden" asp-for="Id" />
+        <!--Cancel Button-->
         <a asp-controller="Home" asp-action="Burials" class="btn btn-primary">No, I Changed My Mind.</a>
     </form>
 </center>
