--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿    
+﻿<!--Home Page--> 
 <section id="about" class="about" style="margin-top:-100px; margin-bottom:-20px;">
         <div class="container">
             <div class="container">
@@ -35,8 +35,8 @@
                             </div>
                         </div>
                     </div>
-</section>
-                </div>
-</div>
+                </section>
+            </div>
         </div>
-    </section>
+    </div>
+</section>
