--- a/Views/Home/MoreInfo.cshtml
+++ b/Views/Home/MoreInfo.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Burialmain
-
+<!--Displaying all informatioin about each record when the See More Button is clicked on a record-->
 <h2>More Information!</h2>
 <p>Record ID: @Model.Id</p>
 <p>Extra Text: @Model.Text</p>
