--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
-
+<!--Privacy Policy Pae-->
 <style>
     [data-custom-class='body'], [data-custom-class='body'] * {
         background: transparent !important;
