--- a/Views/Home/Supervised.cshtml
+++ b/Views/Home/Supervised.cshtml
@@ -1,12 +1,14 @@
 ﻿@{
     var prediction = ViewBag.Prediction as Prediction;
 }
+<!--Supervised Model Input Form-->
 <center>
     <div class="card text-white bg-info mb-3" style="max-width: 50rem;">
         <form class="row g-3" method="post" asp-action="Supervised">
             <h1 class="card-header">Predict Wrapping of Burial</h1>
             <div class="card-body">
                 <p>The more data you enter the more accurate the prediction will be.</p>
+                <!--When the submit button is pressed, the prediction will appear at the top of the form-->
                 @if (prediction != null)
                 {
                     <h3 class="card-title" style="font-weight:bold;">Your Prediction is: @prediction.PredictedValue</h3>
