--- a/Views/Shared/_ColorTable.cshtml
+++ b/Views/Shared/_ColorTable.cshtml
@@ -4,7 +4,7 @@
 @{
 }
 @model BurialsViewModel
-
+<!--Textile Color Table-->
 <table class="table text-white" style="background: rgba(0, 0, 0, 0.4);">
     <thead>
         <tr>
