--- a/Views/Shared/_SeeMore.cshtml
+++ b/Views/Shared/_SeeMore.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Burialmain
+<!--See More Page displayed when the See More BUtton is pressed-->
     <div class="modal fade" id="seeMore-@Model.Id" tabindex="-1" aria-labelledby="seeMore" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
