--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -68,7 +68,7 @@
 </header>
 <body>
     <main role="main" class="pb-3" style="padding-top: 100px">
-        <partial name="_Cookie" />
+        <partial name="_Cookies" />
         @RenderBody()
     </main>
     <br /><br />
@@ -85,6 +85,23 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap2.js"></script>
     <script src="~/lib/jquery/dist/jquery2.min.js"></script>
+    <script>
+        // Check if the cookie indicating consent exists
+        if (!document.cookie.includes('cookieConsent=true')) {
+            // Show the cookie consent popup
+            document.querySelector('.cookie-consent-popup').style.display = 'block';
+        }
+        // Function to handle the "OK" button click
+        document.getElementById('cookie-consent-ok').addEventListener('click', function () {
+            // Set a cookie to indicate consent
+            var expirationDate = new Date();
+            expirationDate.setTime(expirationDate.getTime() + (15 * 60 * 1000)); // 15 minutes in milliseconds
+            // Set a cookie to indicate consent with 15-minute expiration
+            document.cookie = 'cookieConsent=true; expires=' + expirationDate.toUTCString() + '; path=/';
+            // Hide the cookie consent popup
+            document.querySelector('.cookie-consent-popup').style.display = 'none';
+        });
+    </script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
